# rest-shakespearean-pokemon

./: Cargo.toml  Dockerfile  README.md
src/: errors.rs  handlers.rs  main.rs  models.rs
src/repository/: mod.rs  pokemon.rs  translator.rs
