[package]
name = "shakespearean-pokemon"
version = "0.1.0"
authors = ["Marco Burla <mrc.burla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

openssl = "0.10"